--- a/public/style.scss
+++ b/public/style.scss
@@ -1,9 +1,11 @@
 @use 'vars' as v;
 
 @media (min-width: 1440px) {
-    
+   
 }
 
 @media (max-width: 375px) {
-    
+    p {
+        color: red;
+    }  
 }
