--- a/public/style.scss
+++ b/public/style.scss
@@ -1,11 +1,67 @@
 @use 'vars' as v;
 
+@mixin flex($direction) {
+    display: flex;
+    flex-direction: $direction;
+    justify-content: center;
+    align-items: center;
+}
+
+body {
+
+    font-family: v.$text-font;
+    background-color: v.$app-background;
+}
+
+strong {
+
+    font-weight: bold;
+}
+
 @media (min-width: 1440px) {
    
 }
 
 @media (max-width: 375px) {
-    p {
-        color: red;
+
+    .app {
+        
+        height: 100vh;
+        width: 100vw;
+
+        &__background {
+
+            height: 60%;
+            width: 100%;
+
+            &--left {
+
+                height: 100%;
+                width: 50%;
+                background: linear-gradient(v.$gradient-magenta, v.$gradient-violet);
+                border-radius: 0px 2px 187px 0px / 0px 0px 253px 0px;
+            }
+        }
+
+        &__text {
+
+            height: 40%;
+            width: 100%;
+            @include flex($direction: column);
+
+            &--title {
+
+                font-size: v.$text-size * 2.5;
+                margin-bottom: 0.5em;
+            }
+
+            &--paragraph {
+
+                width: 83%;
+                text-align: center;
+                line-height: 1.8em;
+                color: v.$paragraph;
+            }
+        }
     }  
 }
