--- a/style.css
+++ b/style.css
@@ -1,6 +1,44 @@
+body {
+  font-family: "Rubik", sans-serif;
+  background-color: #f5f3f7;
+}
+
+strong {
+  font-weight: bold;
+}
+
 @media (max-width: 375px) {
-  p {
-    color: red;
+  .app {
+    height: 100vh;
+    width: 100vw;
+  }
+  .app__background {
+    height: 60%;
+    width: 100%;
+  }
+  .app__background--left {
+    height: 100%;
+    width: 50%;
+    background: linear-gradient(#e942ff, #8838ff);
+    border-radius: 0px 2px 187px 0px/0px 0px 253px 0px;
+  }
+  .app__text {
+    height: 40%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .app__text--title {
+    font-size: 40px;
+    margin-bottom: 0.5em;
+  }
+  .app__text--paragraph {
+    width: 83%;
+    text-align: center;
+    line-height: 1.8em;
+    color: #a39daa;
   }
 }
 
