--- a/public/style.scss
+++ b/public/style.scss
@@ -1,9 +1,9 @@
 @use 'vars' as v;
 
-@mixin flex($direction) {
+@mixin flex($direction, $justify) {
     display: flex;
     flex-direction: $direction;
-    justify-content: center;
+    justify-content: $justify;
     align-items: center;
 }
 
@@ -11,11 +11,7 @@ body {
 
     font-family: v.$text-font;
     background-color: v.$app-background;
-}
-
-strong {
-
-    font-weight: bold;
+    position: relative;
 }
 
 @media (min-width: 1440px) {
@@ -28,6 +24,7 @@ strong {
         
         height: 100vh;
         width: 100vw;
+        @include flex($direction: column, $justify: center);
 
         &__background {
 
@@ -43,15 +40,126 @@ strong {
             }
         }
 
+        &__chat {
+
+            height: 50%;
+            width: 60%;
+            position: absolute;
+            top: 7%;
+            // left: 17%;
+            background-color: v.$white;
+            margin-left: auto;
+            margin-right: auto;
+            border: 5px solid v.$white;
+            border-radius: 30px;
+            padding: 5px;
+
+            &__header {
+
+                max-width: 100%;
+                height: 15%;
+                background: linear-gradient(to right, v.$gradient-violet, v.$gradient-magenta); 
+                border-top-left-radius: 20px;
+                border-top-right-radius: 20px;
+                border-bottom-left-radius: 5px;
+                border-bottom-right-radius: 5px;
+                @include flex($direction: row, $justify: space-evenly); 
+                position: relative;
+                padding: 0 10px 0 10px;
+                
+
+                &--arrow {
+
+                    width: 5%;
+                    margin-top: 15px;
+                }
+
+                &--dots {
+
+                    width: 5%;
+                    margin-top: 15px;
+                }
+
+                &__infos {
+
+                    @include flex($direction: row, $justify: center);
+                    margin-top: 15px;
+                    margin-left: -55px;
+
+                    &--avatar {
+
+                        width: 9%;
+                        border-radius: 50%;
+                        border: 2px solid v.$white;
+                        margin-right: 8px;
+                    }
+
+                    &__text {
+
+                        // @include flex($direction: column, $justify: center);
+
+                        &--name {
+
+                            font-size: 0.75em;
+                            color: v.$white;
+                            font-weight: 500;
+                            margin-bottom: 4px;
+                        }
+
+                        &--sub-text {
+
+                            font-size: 0.5em;
+                            color: v.$sub-heading;
+                        }
+                    }
+                }
+            }
+
+            &__header::after {
+
+                content: '';
+                display: block;
+                background-color: v.$white;
+                height: 17px;
+                width: 50%;
+                margin-left: auto;
+                margin-right: auto;
+                border-bottom-left-radius: 15px;
+                border-bottom-right-radius: 15px;
+                position: absolute;
+                top: 0;
+                left: 25%;
+                
+            }
+
+            &__main {
+
+                height: 75%;
+                width: 100%;
+                background-color: v.$app-background;
+                // border-top-left-radius: 30px;
+                // border-top-right-radius: 30px;
+            }
+
+            &__footer {
+
+                height: 10%;
+                width: 100%;
+                background-color: v.$app-background;
+                border-bottom-left-radius: 20px;
+                border-bottom-right-radius: 20px;
+            }
+        }
+
         &__text {
 
             height: 40%;
             width: 100%;
-            @include flex($direction: column);
+            @include flex($direction: column, $justify: center);
 
             &--title {
 
-                font-size: v.$text-size * 2.5;
+                font-size: calc(v.$text-size * 2.5);
                 margin-bottom: 0.5em;
             }
 
