--- a/style.css
+++ b/style.css
@@ -1,16 +1,17 @@
 body {
   font-family: "Rubik", sans-serif;
   background-color: #f5f3f7;
-}
-
-strong {
-  font-weight: bold;
+  position: relative;
 }
 
 @media (max-width: 375px) {
   .app {
     height: 100vh;
     width: 100vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
   .app__background {
     height: 60%;
@@ -21,6 +22,91 @@ strong {
     width: 50%;
     background: linear-gradient(#e942ff, #8838ff);
     border-radius: 0px 2px 187px 0px/0px 0px 253px 0px;
+  }
+  .app__chat {
+    height: 50%;
+    width: 60%;
+    position: absolute;
+    top: 7%;
+    background-color: white;
+    margin-left: auto;
+    margin-right: auto;
+    border: 5px solid white;
+    border-radius: 30px;
+    padding: 5px;
+  }
+  .app__chat__header {
+    max-width: 100%;
+    height: 15%;
+    background: linear-gradient(to right, #8838ff, #e942ff);
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    position: relative;
+    padding: 0 10px 0 10px;
+  }
+  .app__chat__header--arrow {
+    width: 5%;
+    margin-top: 15px;
+  }
+  .app__chat__header--dots {
+    width: 5%;
+    margin-top: 15px;
+  }
+  .app__chat__header__infos {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin-top: 15px;
+    margin-left: -55px;
+  }
+  .app__chat__header__infos--avatar {
+    width: 9%;
+    border-radius: 50%;
+    border: 2px solid white;
+    margin-right: 8px;
+  }
+  .app__chat__header__infos__text--name {
+    font-size: 0.75em;
+    color: white;
+    font-weight: 500;
+    margin-bottom: 4px;
+  }
+  .app__chat__header__infos__text--sub-text {
+    font-size: 0.5em;
+    color: #d89eff;
+  }
+  .app__chat__header::after {
+    content: "";
+    display: block;
+    background-color: white;
+    height: 17px;
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+    position: absolute;
+    top: 0;
+    left: 25%;
+  }
+  .app__chat__main {
+    height: 75%;
+    width: 100%;
+    background-color: #f5f3f7;
+  }
+  .app__chat__footer {
+    height: 10%;
+    width: 100%;
+    background-color: #f5f3f7;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
   }
   .app__text {
     height: 40%;
