mobile version done

--- a/public/_vars.scss
+++ b/public/_vars.scss
@@ -15,6 +15,7 @@ $white: hsl(0, 0%, 100%);
 $app-background: hsl(270, 20%, 96%);
 $submit-button: hsl(271, 36%, 24%);
 $radio-button: hsl(289, 100%, 72%);
+$text-background: #EDE4F5;
 
 // global fonts
 $text-size: 16px;
