--- a/public/style.scss
+++ b/public/style.scss
@@ -1,10 +1,10 @@
 @use 'vars' as v;
 
-@mixin flex($direction, $justify) {
+@mixin flex($direction, $justify, $align) {
     display: flex;
     flex-direction: $direction;
     justify-content: $justify;
-    align-items: center;
+    align-items: $align;
 }
 
 body {
@@ -24,7 +24,7 @@ body {
         
         height: 100vh;
         width: 100vw;
-        @include flex($direction: column, $justify: center);
+        @include flex($direction: column, $justify: center, $align: center);
 
         &__background {
 
@@ -42,7 +42,7 @@ body {
 
         &__chat {
 
-            height: 50%;
+            height: 55%;
             width: 60%;
             position: absolute;
             top: 7%;
@@ -53,6 +53,7 @@ body {
             border: 5px solid v.$white;
             border-radius: 30px;
             padding: 5px;
+            margin-top: -10px;
 
             &__header {
 
@@ -63,7 +64,7 @@ body {
                 border-top-right-radius: 20px;
                 border-bottom-left-radius: 5px;
                 border-bottom-right-radius: 5px;
-                @include flex($direction: row, $justify: space-evenly); 
+                @include flex($direction: row, $justify: space-evenly, $align: center); 
                 position: relative;
                 padding: 0 10px 0 10px;
                 
@@ -82,7 +83,7 @@ body {
 
                 &__infos {
 
-                    @include flex($direction: row, $justify: center);
+                    @include flex($direction: row, $justify: center, $align: center);
                     margin-top: 15px;
                     margin-left: -55px;
 
@@ -96,7 +97,7 @@ body {
 
                     &__text {
 
-                        // @include flex($direction: column, $justify: center);
+                        // @include flex($direction: column, $justify: center, $align: center);
 
                         &--name {
 
@@ -127,7 +128,7 @@ body {
                 border-bottom-left-radius: 15px;
                 border-bottom-right-radius: 15px;
                 position: absolute;
-                top: 0;
+                top: -1px;
                 left: 25%;
                 
             }
@@ -137,17 +138,194 @@ body {
                 height: 75%;
                 width: 100%;
                 background-color: v.$app-background;
+                @include flex($direction: column, $justify: space-evenly, $align: flex-start);
+                // padding: 10px;
                 // border-top-left-radius: 30px;
                 // border-top-right-radius: 30px;
+
+                &__left {
+
+                    @include flex($direction: column, $justify: space-around, $align: left);
+                    // height: 31%;
+                    width: 60%;
+                    // margin-top: -69px;
+                    margin-left: 11px;
+
+                    &--text {
+
+                        font-size: calc(v.$text-size / 1.9);
+                        color: v.$main-heading;
+                        background-color: v.$text-background;
+                        padding: 0.8em;
+                        border-radius: 15px;
+                        line-height: 1.2em;
+                        margin-bottom: 8px;
+                    }
+                }
+
+                &__pictures {
+
+                    // margin-top: -69px;
+                    margin-left: 82px;
+                    width: 60%;
+                    @include flex($direction: row, $justify: space-around, $align: left);
+                    margin-top: -5px;
+                    margin-bottom: -5px;
+
+                    &--img {
+
+                        width: 25%;
+                        border-radius: 10px;
+                    }
+                }
+
+                &__right {
+
+                    @include flex($direction: column, $justify: space-around, $align: flex-end);
+                    // height: 31%;
+                    width: 60%;
+                    // margin-top: -69px;
+                    margin-left: 77px;
+
+                    &--text {
+
+                        font-size: calc(v.$text-size / 1.9);
+                        color: v.$main-heading;
+                        background-color: v.$white;
+                        padding: 0.8em;
+                        border-radius: 15px;
+                        line-height: 1.2em;
+                        margin-top: 8px;
+                    }
+                }
+
+                &__radio {
+
+                    @include flex($direction: row, $justify: space-around, $align: center);
+                    width: 65%;
+                    // height: 10%;
+                    background: linear-gradient(to left, v.$gradient-violet, v.$gradient-magenta); 
+                    border-top-left-radius: 10px;
+                    border-top-right-radius: 10px;
+                    border-bottom-left-radius: 5px;
+                    border-bottom-right-radius: 10px;
+                    margin-left: 11px;
+                    // margin-top: -28px;
+                    padding: 5px;
+
+                    &--input1 {
+
+                        border: 1px solid v.$text-placeholder;
+                        background-color: v.$gradient-violet;
+                        margin-left: -9px;
+                        margin-right: -25px;
+                        width: 8%;
+                        position: relative;
+                    }
+
+                    &--input1::after {
+
+                        content: "";
+                        display: block;
+                        position: absolute;
+                        top: 1.3px;
+                        left: 1.5px;
+                        width: 80%;
+                        height: 80%;
+                        border-radius: 50%;
+                        background-color: v.$gradient-magenta;
+                    }
+
+                    &--input2 {
+
+                        border: 1px solid v.$text-placeholder;
+                        background-color: v.$gradient-violet;
+                        margin-left: -17px;
+                        margin-right: -44px;
+                        width: 8%;
+                        position: relative;
+                    }
+
+                    &--input2::after {
+
+                        content: "";
+                        display: block;
+                        position: absolute;
+                        top: 1px;
+                        left: 1.3px;
+                        width: 80%;
+                        height: 80%;
+                        border-radius: 50%;
+                        background-color: v.$gradient-magenta;
+                    }
+
+                    &--time1 {
+
+                        font-size: 0.5em;
+                        margin-top: 2px;
+                        color: v.$white;
+                    }
+
+                    &--time2 {
+
+                        font-size: 0.5em;
+                        margin-top: 2px;
+                        color: v.$white;
+                    }
+
+                    &--price1 {
+
+                        font-size: 0.6em;
+                        color: v.$white;
+                        font-weight: 500;
+                    }
+
+                    &--price2 {
+
+                        font-size: 0.6em;
+                        color: v.$white;
+                        margin-right: -9px;
+                        font-weight: 500;
+                    }
+                }
+                
             }
 
             &__footer {
 
+                @include flex($direction: row, $justify: center, $align: center);
                 height: 10%;
                 width: 100%;
                 background-color: v.$app-background;
                 border-bottom-left-radius: 20px;
                 border-bottom-right-radius: 20px;
+
+                &--input {
+
+                    width: 80%;
+                    height: 25%;
+                    background-color: v.$white;
+                    border-radius: 30px;
+                    border: none;
+                    position: relative;
+                    margin-top: -5px;
+                    padding: 0.7em;
+                }
+
+                &--input::placeholder {
+
+                    font-size: calc(v.$text-size / 1.5); 
+                    color: v.$text-placeholder;
+                }
+
+                &--send {
+
+                    width: 10%;
+                    position: absolute;
+                    top: 415px;
+                    left: 190px;
+
+                }
             }
         }
 
@@ -155,12 +333,13 @@ body {
 
             height: 40%;
             width: 100%;
-            @include flex($direction: column, $justify: center);
+            @include flex($direction: column, $justify: center, $align: center);
 
             &--title {
 
                 font-size: calc(v.$text-size * 2.5);
                 margin-bottom: 0.5em;
+                font-weight: 500;
             }
 
             &--paragraph {
