--- a/public/style.scss
+++ b/public/style.scss
@@ -14,21 +14,17 @@ body {
     position: relative;
 }
 
-@media (min-width: 1440px) {
+@media (max-width: 1440px) {
    
-}
-
-@media (max-width: 375px) {
-
     .app {
         
         height: 100vh;
         width: 100vw;
-        @include flex($direction: column, $justify: center, $align: center);
+        @include flex($direction: row, $justify: space-around, $align: start);
 
         &__background {
 
-            height: 60%;
+            height: 85%;
             width: 100%;
 
             &--left {
@@ -36,17 +32,21 @@ body {
                 height: 100%;
                 width: 50%;
                 background: linear-gradient(v.$gradient-magenta, v.$gradient-violet);
-                border-radius: 0px 2px 187px 0px / 0px 0px 253px 0px;
+                // border-radius: 0px 2px 187px 0px / 0px 0px 253px 0px;
+                // border-top-left-radius: 20px;
+                // border-top-right-radius: 20px;
+                border-bottom-left-radius: 200px;
+                border-bottom-right-radius: 200px;
             }
         }
 
         &__chat {
 
-            height: 55%;
-            width: 60%;
+            height: 60%;
+            width: 17%;
             position: absolute;
-            top: 7%;
-            // left: 17%;
+            top: 13%;
+            left: 321px;
             background-color: v.$white;
             margin-left: auto;
             margin-right: auto;
@@ -251,6 +251,344 @@ body {
                         content: "";
                         display: block;
                         position: absolute;
+                        top: 1.2px;
+                        left: 1.3px;
+                        width: 80%;
+                        height: 80%;
+                        border-radius: 50%;
+                        background-color: v.$gradient-magenta;
+                    }
+
+                    &--time1 {
+
+                        font-size: 0.5em;
+                        margin-top: 2px;
+                        color: v.$white;
+                    }
+
+                    &--time2 {
+
+                        font-size: 0.5em;
+                        margin-top: 2px;
+                        color: v.$white;
+                    }
+
+                    &--price1 {
+
+                        font-size: 0.6em;
+                        color: v.$white;
+                        font-weight: 500;
+                    }
+
+                    &--price2 {
+
+                        font-size: 0.6em;
+                        color: v.$white;
+                        margin-right: -9px;
+                        font-weight: 500;
+                    }
+                }
+                
+            }
+
+            &__footer {
+
+                @include flex($direction: row, $justify: center, $align: center);
+                height: 10%;
+                width: 100%;
+                background-color: v.$app-background;
+                border-bottom-left-radius: 20px;
+                border-bottom-right-radius: 20px;
+
+                &--input {
+
+                    width: 85%;
+                    height: 25%;
+                    background-color: v.$white;
+                    border-radius: 30px;
+                    border: none;
+                    position: relative;
+                    margin-top: -5px;
+                    padding: 0.7em;
+                }
+
+                &--input::placeholder {
+
+                    font-size: calc(v.$text-size / 1.5); 
+                    color: v.$text-placeholder;
+                }
+
+                &--send {
+
+                    width: 10%;
+                    position: absolute;
+                    top: 478px;
+                    left: 211px;
+
+                }
+            }
+        }
+
+        &__text {
+
+            height: 40%;
+            width: 58%;
+            @include flex($direction: column, $justify: center, $align: flex-start);
+            margin-top: 210px;
+            margin-right: 200px;
+
+            &--title {
+
+                font-size: calc(v.$text-size * 2.5);
+                margin-bottom: 0.5em;
+                font-weight: 500;
+                
+            }
+
+            &--paragraph {
+
+                width: 83%;
+                text-align: justify;
+                line-height: 1.8em;
+                color: v.$paragraph;
+            }
+        }
+    }
+}
+
+@media (max-width: 375px) {
+
+    .app {
+        
+        height: 100vh;
+        width: 100vw;
+        @include flex($direction: column, $justify: center, $align: center);
+
+        &__background {
+
+            height: 60%;
+            width: 100%;
+
+            &--left {
+
+                height: 100%;
+                width: 50%;
+                background: linear-gradient(v.$gradient-magenta, v.$gradient-violet);
+                border-radius: 0px 2px 187px 0px / 0px 0px 253px 0px;
+            }
+        }
+
+        &__chat {
+
+            height: 55%;
+            width: 60%;
+            position: absolute;
+            top: 7%;
+            left: 18%;
+            background-color: v.$white;
+            margin-left: auto;
+            margin-right: auto;
+            border: 5px solid v.$white;
+            border-radius: 30px;
+            padding: 5px;
+            margin-top: -10px;
+
+            &__header {
+
+                max-width: 100%;
+                height: 15%;
+                background: linear-gradient(to right, v.$gradient-violet, v.$gradient-magenta); 
+                border-top-left-radius: 20px;
+                border-top-right-radius: 20px;
+                border-bottom-left-radius: 5px;
+                border-bottom-right-radius: 5px;
+                @include flex($direction: row, $justify: space-evenly, $align: center); 
+                position: relative;
+                padding: 0 10px 0 10px;
+                
+
+                &--arrow {
+
+                    width: 5%;
+                    margin-top: 15px;
+                }
+
+                &--dots {
+
+                    width: 5%;
+                    margin-top: 15px;
+                }
+
+                &__infos {
+
+                    @include flex($direction: row, $justify: center, $align: center);
+                    margin-top: 15px;
+                    margin-left: -55px;
+
+                    &--avatar {
+
+                        width: 9%;
+                        border-radius: 50%;
+                        border: 2px solid v.$white;
+                        margin-right: 8px;
+                    }
+
+                    &__text {
+
+                        // @include flex($direction: column, $justify: center, $align: center);
+
+                        &--name {
+
+                            font-size: 0.75em;
+                            color: v.$white;
+                            font-weight: 500;
+                            margin-bottom: 4px;
+                        }
+
+                        &--sub-text {
+
+                            font-size: 0.5em;
+                            color: v.$sub-heading;
+                        }
+                    }
+                }
+            }
+
+            &__header::after {
+
+                content: '';
+                display: block;
+                background-color: v.$white;
+                height: 17px;
+                width: 50%;
+                margin-left: auto;
+                margin-right: auto;
+                border-bottom-left-radius: 15px;
+                border-bottom-right-radius: 15px;
+                position: absolute;
+                top: -1px;
+                left: 25%;
+                
+            }
+
+            &__main {
+
+                height: 75%;
+                width: 100%;
+                background-color: v.$app-background;
+                @include flex($direction: column, $justify: space-evenly, $align: flex-start);
+                // padding: 10px;
+                // border-top-left-radius: 30px;
+                // border-top-right-radius: 30px;
+
+                &__left {
+
+                    @include flex($direction: column, $justify: space-around, $align: left);
+                    // height: 31%;
+                    width: 60%;
+                    // margin-top: -69px;
+                    margin-left: 11px;
+
+                    &--text {
+
+                        font-size: calc(v.$text-size / 1.9);
+                        color: v.$main-heading;
+                        background-color: v.$text-background;
+                        padding: 0.8em;
+                        border-radius: 15px;
+                        line-height: 1.2em;
+                        margin-bottom: 8px;
+                    }
+                }
+
+                &__pictures {
+
+                    // margin-top: -69px;
+                    margin-left: 82px;
+                    width: 60%;
+                    @include flex($direction: row, $justify: space-around, $align: left);
+                    margin-top: -5px;
+                    margin-bottom: -5px;
+
+                    &--img {
+
+                        width: 25%;
+                        border-radius: 10px;
+                    }
+                }
+
+                &__right {
+
+                    @include flex($direction: column, $justify: space-around, $align: flex-end);
+                    // height: 31%;
+                    width: 60%;
+                    // margin-top: -69px;
+                    margin-left: 77px;
+
+                    &--text {
+
+                        font-size: calc(v.$text-size / 1.9);
+                        color: v.$main-heading;
+                        background-color: v.$white;
+                        padding: 0.8em;
+                        border-radius: 15px;
+                        line-height: 1.2em;
+                        margin-top: 8px;
+                    }
+                }
+
+                &__radio {
+
+                    @include flex($direction: row, $justify: space-around, $align: center);
+                    width: 65%;
+                    // height: 10%;
+                    background: linear-gradient(to left, v.$gradient-violet, v.$gradient-magenta); 
+                    border-top-left-radius: 10px;
+                    border-top-right-radius: 10px;
+                    border-bottom-left-radius: 5px;
+                    border-bottom-right-radius: 10px;
+                    margin-left: 11px;
+                    // margin-top: -28px;
+                    padding: 5px;
+
+                    &--input1 {
+
+                        border: 1px solid v.$text-placeholder;
+                        background-color: v.$gradient-violet;
+                        margin-left: -9px;
+                        margin-right: -25px;
+                        width: 8%;
+                        position: relative;
+                    }
+
+                    &--input1::after {
+
+                        content: "";
+                        display: block;
+                        position: absolute;
+                        top: 1.3px;
+                        left: 0.8px;
+                        width: 80%;
+                        height: 80%;
+                        border-radius: 50%;
+                        background-color: v.$gradient-magenta;
+                    }
+
+                    &--input2 {
+
+                        border: 1px solid v.$text-placeholder;
+                        background-color: v.$gradient-violet;
+                        margin-left: -17px;
+                        margin-right: -44px;
+                        width: 8%;
+                        position: relative;
+                    }
+
+                    &--input2::after {
+
+                        content: "";
+                        display: block;
+                        position: absolute;
                         top: 1px;
                         left: 1.3px;
                         width: 80%;
@@ -302,7 +640,7 @@ body {
 
                 &--input {
 
-                    width: 80%;
+                    width: 85%;
                     height: 25%;
                     background-color: v.$white;
                     border-radius: 30px;
@@ -323,7 +661,7 @@ body {
                     width: 10%;
                     position: absolute;
                     top: 415px;
-                    left: 190px;
+                    left: 195px;
 
                 }
             }
@@ -334,6 +672,8 @@ body {
             height: 40%;
             width: 100%;
             @include flex($direction: column, $justify: center, $align: center);
+            margin-top: 0;
+            margin-right: 0;
 
             &--title {
 
